Solved an issue with the indicator carousel leaving a gap

--- a/css/global-style.css
+++ b/css/global-style.css
@@ -4044,6 +4044,6 @@ h2.carousel-text{
 
   .indicator-container{
     position: absolute;
-    padding-top: 30.25em
+    padding-top: 29.65em
   }
 }
